Finally fix bug with footer covering content

--- a/pages/users/[id]/usersPage.module.css
+++ b/pages/users/[id]/usersPage.module.css
@@ -1,15 +1,24 @@
-.container {
+.usersPage {
   width: 100%;
-  height: 80vh;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  height: 100%;
   margin-top: 2rem;
+}
+
+.container {
+  overflow-y: hidden;
+  height: 80%;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
+  margin-bottom: 2rem;
 }
 
 .userInfo {
   background-color: var(--dark-2);
   border-radius: 1rem;
+  height: 50%;
   width: 100%;
   display: flex;
   align-items: center;
@@ -34,28 +43,28 @@
 }
 
 .partLists {
+  position: relative;
+  display: flex;
   margin-left: 2rem;
-  height: 95%;
-  width: 60vw;
+  flex-grow: 0.6;
   background-color: var(--dark-2);
   border-radius: 1rem;
   margin-right: 2rem;
 }
 
 .partLists.noLists {
-  display: flex;
   align-items: center;
   justify-content: center;
 }
 
-
 .userSummary {
+  position: relative;
   margin-left: 2rem;
-  height: 95%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 18rem;
+  flex-grow: 0.1;
 }
 
 .userName {
@@ -67,10 +76,13 @@
   margin-top: 0.7rem;
 }
 
-.userName h1 {
-  font-size: 2.5rem;
-  margin-top: 0.5rem;
-  margin: 0;
+.userNameText {
+  margin-top: 0;
+  margin-bottom: 0.3rem;
+  width: 100%;
+  font-size: max(2vw, 1.5rem);
+  color: white;
+  font-weight: bold;
 }
 
 .badges {
@@ -96,6 +108,7 @@
 
 .userStats {
   margin-top: 2rem;
+  height: 30%;
   width: 100%;
   flex-grow: 1;
   background-color: var(--dark-2);
